# DevToolboxWeb

./: .dockerignore  .example.env  Dockerfile-dev  README.md  docker-compose.yml  next.config.js  readme-setup.md
api/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run-format.sh
api/app/: main.py
api/app/modules/encoding_handling/: routes.py  shemas.py
dev/: readme.md
dev/docs/: readme.md
dev/examples/: .example.env  .example.env.docker
dev/scripts/: run-lint.sh  run-post-build.sh
prisma/: .gitignore  docker-compose.yml  schema.prisma
src/app/components/common/: ToolList.tsx
src/app/tools/file-encoding-detector/: FileEncodingDetectorComponent.tsx  page.tsx
